# Willow

./: CMakeLists.txt  README.md  error.c  error.h  parse.c  type.c  willow.c
examples/: willow.w
include/willow/: check_words.h  error.h  lexer.h  logger.h  memory.h  parse.h  type.h
include/willow/lexer/: token.h
src/: check_words.c  error.c  lexer.c  lexer_token.c  logger.c  main.c  memory.c  parse.c  willow.c
